--- a/WebApp/internals/generators/component/stateless.js.hbs
+++ b/WebApp/internals/generators/component/stateless.js.hbs
@@ -18,16 +18,15 @@ interface OwnProps extends WithStyles<typeof styles> { }
 interface OwnProps { }
 {{/if}}
 
-const {{ properCase name }}: React.FunctionComponent<OwnProps> = (props: OwnProps) => {
-  return (
-    <Fragment>
-      {{#if wantMessages}}
-      <FormattedMessage {...messages.header} />
-      {{/if}}
-      {{ properCase name }}
-    </Fragment>
-  );
-};
+const {{ properCase name }}: React.FunctionComponent<OwnProps> = (props: OwnProps) => (
+  <Fragment>
+    {{#if wantMessages}}
+    <FormattedMessage {...messages.header} />
+    {{/if}}
+    {{ properCase name }}
+  </Fragment>
+);
+
 
 {{#if wantMUIStyles}}
 export default withStyles(styles, { withTheme: true })({{ properCase name }});
